# harn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py
tests/test_agent/: test_agent_api.py  test_agent_harness.py  test_agent_loop.py  test_compaction.py  test_env_local.py  test_harness.py  test_integration.py  test_proxy.py  test_session.py  test_truncate.py
tests/test_ai/: test_anthropic_provider.py  test_api_registry.py  test_azure_openai_responses_provider.py  test_bedrock_provider.py  test_diagnostics_utils.py  test_e2e_streaming.py  test_faux_and_images.py  test_google_provider.py  test_google_shared.py  test_google_vertex_provider.py  test_mistral_provider.py  test_models.py  test_oauth_and_proxy.py  test_openai_codex_provider.py  test_openai_completions_provider.py  test_openai_responses_shared.py  test_phase1_utils.py  test_phase2_shared.py  test_provider_helpers.py  test_provider_option_exports.py  test_register_builtins_provider.py  test_streaming_utils.py  test_types.py
tests/test_coding_agent/: test_agent_session_foundation.py  test_agent_session_runtime.py  test_auth_storage.py  test_bash_read_write_tools.py  test_bun_wrappers.py  test_cli_helpers.py  test_cli_selectors.py  test_clipboard_image_utils.py  test_clipboard_native_utils.py  test_clipboard_utils.py  test_coding_agent_compaction.py  test_config_and_entrypoint.py  test_config_and_settings_selectors.py  test_core_services.py  test_custom_editor_and_armin.py  test_edit_tools.py  test_export_html_helpers.py  test_extension_runtime.py  (+28 more)
(+18 files in other folders)
